docs/vocabulary-synopsis/_sources/type/Region/v2/index.rst.txt
:orphan:

Region (v2)
===========

.. warning::
   This is not the latest version. The latest version is :doc:`v6 <../v6/index>`.

**Previous Version:** :doc:`v1 <../v1/index>`

**URI:** `http://clams.ai/vocabulary/type/Region/v2 <http://clams.ai/vocabulary/type/Region/v2>`_

**Shortname:** ``Region``

**Inherits from:** :doc:`Annotation (v3) <../../Annotation/v3/index>`

**Included in vocabulary versions:** :doc:`1.0.0 <../../../1.0.0/index>`, :doc:`1.0.1 <../../../1.0.1/index>`

Also Known As
-------------

This type is also accessible at the following legacy URLs for backward
compatibility:

- `http://mmif.clams.ai/vocabulary/Region/v1 <http://mmif.clams.ai/vocabulary/Region/v1>`_
- `http://mmif.clams.ai/0.4.0/vocabulary/Region/ <http://mmif.clams.ai/0.4.0/vocabulary/Region/>`_
- `http://mmif.clams.ai/0.4.1/vocabulary/Region/ <http://mmif.clams.ai/0.4.1/vocabulary/Region/>`_
- `http://mmif.clams.ai/0.4.2/vocabulary/Region/ <http://mmif.clams.ai/0.4.2/vocabulary/Region/>`_


Description
-----------

An annotation over a region in primary data where primary data can be a text, an image, an audio stream or a video streem. Typically one of the sub types of this will be used.


Properties
----------

Synopsis
^^^^^^^^

*Properties marked with* **\*** *are required.*

.. list-table::
   :header-rows: 1
   :widths: 15 10 15 60

   * - Property
     - Type
     - Origin
     - Description
   * - ``timeUnit``
     - string
     - *native*
     - Specifies which unit of time the measurement is based. Can be seconds or milliseconds, or in case ... `(more) <#timeunit>`__

   * - ``document``
     - string
     - :doc:`Annotation (v3) <../../Annotation/v3/index>`
     - The identifier of the document that the annotation is over. `(more) <#document>`__

   * - ``id`` **\***
     - string
     - :doc:`Thing (v1) <../../Thing/v1/index>`
     - A unique identifier for the annotation or document. Uniqueness is relative to the view the ... `(more) <#id>`__



Native
^^^^^^


timeUnit
""""""""

- type: *string*
- required: no

Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*.


Inherited from :doc:`Annotation (v3) <../../Annotation/v3/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


document
""""""""

- type: *string*
- required: no

The identifier of the document that the annotation is over.


Inherited from :doc:`Thing (v1) <../../Thing/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


id
""

- type: *string*
- required: yes

A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.


JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*."
       }
     },
     "required": [
       "id"
     ],
     "type": "object"
   }